WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
211984
[LFC][TFC] Ignore table padding when borders are collapsed
https://bugs.webkit.org/show_bug.cgi?id=211984
Summary
[LFC][TFC] Ignore table padding when borders are collapsed
alan
Reported
2020-05-16 09:07:06 PDT
no room for padding
Attachments
Patch
(6.69 KB, patch)
2020-05-16 09:10 PDT
,
alan
no flags
Details
Formatted Diff
Diff
add missing check
(1.48 KB, patch)
2020-05-16 10:24 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2020-05-16 09:10:11 PDT
Created
attachment 399554
[details]
Patch
EWS
Comment 2
2020-05-16 10:10:22 PDT
Committed
r261784
: <
https://trac.webkit.org/changeset/261784
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399554
[details]
.
Radar WebKit Bug Importer
Comment 3
2020-05-16 10:11:14 PDT
<
rdar://problem/63306659
>
alan
Comment 4
2020-05-16 10:24:21 PDT
Created
attachment 399559
[details]
add missing check
alan
Comment 5
2020-05-16 11:36:36 PDT
add missing check
EWS
Comment 6
2020-05-16 12:16:37 PDT
Committed
r261786
: <
https://trac.webkit.org/changeset/261786
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 399559
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug