[LFC][TFC] Ignore table padding when borders are collapsed https://bugs.webkit.org/show_bug.cgi?id=211984

Reviewed by Antti Koivisto.

Source/WebCore:

Table padding has no room left when the table border is collapsed with the inner table elements.

Test: fast/layoutformattingcontext/table-simple-border-collapse-with-padding.html

* layout/Verification.cpp:
(WebCore::Layout::outputMismatchingBlockBoxInformationIfNeeded):
* layout/layouttree/LayoutBox.cpp:
(WebCore::Layout::Box::isPaddingApplicable const):

LayoutTests:

* fast/layoutformattingcontext/table-simple-border-collapse-with-padding-expected.html: Added.
* fast/layoutformattingcontext/table-simple-border-collapse-with-padding.html: Added.


Canonical link: https://commits.webkit.org/224876@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261784 268f45cc-cd09-0410-ab3c-d52691b4dbfc